# PonderCanvas

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  features.md  google-auth.md
src/pondercanvas/: __main__.py  logging_utils.py  tracing.py
src/pondercanvas/agent/: agents.py  extraction.py  nodes.py  (+4 more)
tests/: conftest.py
tests/fixtures/: fake_image_provider.py  fake_llm.py  fake_siglip_scorer.py  fake_structured_provider.py  fake_tool_context.py  sample_brief.py
tests/integration_offline/: test_agents_build.py  test_fast_refinement.py  test_instant_generation.py  test_loop_agent_iteration_control.py  test_pipeline_provider_selection.py  test_pipeline_state_propagation.py  test_refinement_workflow_iteration_control.py  test_workflow_build.py
tests/live/: test_live_gemini_end_to_end.py
tests/ui/: test_app_error_logging.py  test_components.py  test_settings_panel_build.py  test_settings_resolution_handlers.py
tests/unit/: test_chat_provider_factory.py  test_collect_references.py  test_extraction.py  test_gemini_http_options.py  test_gemini_image_provider.py  test_gemini_structured_provider.py  test_image_provider_registry.py  test_logging_utils.py  test_nodes.py  test_schemas.py  test_search_grounding.py  test_settings.py  test_siglip_scorer.py  test_tools_control_exit_loop.py  test_tools_evaluation.py  test_tools_generation.py  test_tools_research.py  test_unsplash_search.py
(+34 files in other folders)
